[dependencies]
serde.workspace = true

[package]
name = "gov-http-pagination"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Shared pagination primitives for governance HTTP APIs"
