[dependencies]
chrono = { features = ["serde"], workspace = true }
gov-http-core = { path = "../gov-http-core" }
gov-http-types = { path = "../gov-http-types" }
gov-model = { path = "../gov-model" }
http-errors = { path = "../http-errors", features = ["axum"] }
platform-contract = { path = "../platform-contract" }
spec-runtime = { path = "../spec-runtime" }
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json = { workspace = true }

[package]
name = "gov-http-questions"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
