[lints]
workspace = true

[package]
name = "gov-http-types"
description = "Shared HTTP API types for governance endpoints (FrictionEntry, Question)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
gov-model.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
