[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
gov-http-core = {path = "../gov-http-core"}
gov-http-forks = {path = "../gov-http-forks"}
gov-http-friction = {path = "../gov-http-friction"}
gov-http-issues = {path = "../gov-http-issues"}
gov-http-questions = {path = "../gov-http-questions"}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}
gov-contracts.workspace = true
gov-model.workspace = true
spec-runtime.workspace = true

[package]
description = "Platform HTTP router for Rust-as-Spec governance endpoints"
name = "gov-http"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
