[dependencies]
serde = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
proptest.workspace = true

[lib]
name = "gov_model"

[package]
categories = ["data-structures", "development-tools"]
description = "Governance domain model types for Rust-as-Spec platform"
documentation = "https://docs.rs/rust-as-spec-gov-model"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["domain", "governance", "model", "spec"]
name = "rust-as-spec-gov-model"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
