[dependencies]
serde = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
proptest.workspace = true

[lib]
name = "gov_model"

[lints]
workspace = true

[package]
name = "rust-as-spec-gov-model"
description = "Governance domain model types for Rust-as-Spec platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/rust-as-spec-gov-model"
categories = ["data-structures", "development-tools"]
keywords = ["governance", "model", "spec", "domain"]
include = ["src/**/*", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "Cargo.toml"]
