[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
gov-model = {path = "../gov-model"}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

[package]
description = "Rego policy bundle and runner for Rust-as-Spec platform"
name = "gov-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
