[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
gov-model.workspace = true

[lib]
name = "gov_policy"

[package]
categories = ["development-tools"]
description = "Rego policy bundle and runner for Rust-as-Spec platform"
documentation = "https://docs.rs/rust-as-spec-gov-policy"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["governance", "opa", "policy", "rego"]
name = "rust-as-spec-gov-policy"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
