[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
gov-model.workspace = true
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

[lib]
name = "gov_policy"

[lints]
workspace = true

[package]
name = "rust-as-spec-gov-policy"
description = "Rego policy bundle and runner for Rust-as-Spec platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/rust-as-spec-gov-policy"
categories = ["development-tools"]
keywords = ["governance", "opa", "policy", "rego"]
include = ["src/**/*", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "Cargo.toml"]
