[dependencies]
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
serde_json = {workspace = true}

[package]
description = "Receipt types for audit evidence in Rust-as-Spec platform"
name = "gov-receipts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
