[dependencies]
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
serde_json = {workspace = true}

[lib]
name = "gov_receipts"

[package]
name = "rust-as-spec-gov-receipts"
description = "Receipt types for audit evidence in Rust-as-Spec platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/rust-as-spec-gov-receipts"
categories = ["data-structures", "development-tools"]
keywords = ["audit", "evidence", "governance", "receipts"]
include = ["src/**/*", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "Cargo.toml"]
