[dependencies]
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
serde_json = {workspace = true}

[lib]
name = "gov_receipts"

[package]
categories = ["data-structures", "development-tools"]
description = "Receipt types for audit evidence in Rust-as-Spec platform"
documentation = "https://docs.rs/rust-as-spec-gov-receipts"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["audit", "evidence", "governance", "receipts"]
name = "rust-as-spec-gov-receipts"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
