[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
gov-model = {path = "../gov-model"}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}

[package]
description = "Governance xtask core utilities"
name = "gov-xtask-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
