[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
gov-model.workspace = true

[dev-dependencies]
tempfile = {workspace = true}

[lib]
name = "gov_xtask_core"

[package]
categories = ["development-tools"]
description = "Governance xtask core utilities"
documentation = "https://docs.rs/rust-as-spec-gov-xtask-core"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["governance", "utilities", "xtask"]
name = "rust-as-spec-gov-xtask-core"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
