[dependencies]
http-auth-config-loader = {workspace = true}
spec-runtime.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
testing.workspace = true

[package]
name = "http-auth-config"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
