[dependencies]
http = {workspace = true}
http-auth-policy = {path = "../http-auth-policy"}
http-auth-token = {path = "../http-auth-token"}

[dev-dependencies]
proptest.workspace = true

[package]
name = "http-auth-guard"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
