[dependencies]
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true

[package]
name = "http-auth-mode"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
